working init stack page

--- a/parts/client/stack.jade
+++ b/parts/client/stack.jade
@@ -1,11 +1,18 @@
 template(name='stack')
     .ui.stackable.grid
         .row
-            .sixteen.wide.column
+            .four.wide.column
                 .ui.header stackexchange
                 .ui.input
                     input(type='text')
                 .ui.header sites
                 each sites
                     .ui.header #{title}
+            .twelve.wide.column
                 .ui.header questions
+                each stack_docs
+                    .ui.header #{title}
+                    
+                    
+                    
+                    
