--- a/parts/client/stack.jade
+++ b/parts/client/stack.jade
@@ -173,9 +173,20 @@ template(name='stack_page')
                     .ui.label last_activity_date #{last_activity_date}
                     .ui.label creation #{creation_date}
                     .ui.label #{_when}
-                    +comments
-                .twelve.wide.column
+                .eight.wide.column
+                    if watson 
+                        if tone
+                            +tone
+                        +watson_view
+                        .ui.button.call_tone 
+                            |tone
+                    i.large.brain.icon.call_watson
                     // iframe(width="100%" height="500" src=link frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
+                    +comments
+                .four.wide.column
+                    +voting
+                    a.ui.header(href="/site/#{site}") 
+                        |site: #{site}
                     with owner
                         .ui.compact.segment
                             a.ui.inline.header(href="/stackuser/#{user_id}") #{display_name}
