--- a/parts/client/stack.jade
+++ b/parts/client/stack.jade
@@ -19,7 +19,7 @@ template(name='stack')
                                 img(src=icon_url)
                                 |#{name}
             .twelve.wide.column
-                .ui.header 
+                .ui.inline.header 
                     i.question.icon
                     |questions
                 // .ui.dropdown
