add question and chat files, messages

--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -64,8 +64,8 @@ template(name='layout')
         // .scrolling
         // if currentUser
         //     +bottom_nav
-    // +chatpop
-    // +footer
+    +chatpop
+    +footer
 
 
 
