--- a/parts/profile.jade
+++ b/parts/profile.jade
@@ -27,12 +27,12 @@ template(name='profile')
                                 i.big.cog.pointer.icon
                         if is_dev
                             .ui.small.inline.header #{_id}
-                        // unless is_current_user
-                        //     if currentUser
-                        //         // div
-                        //         +user_friend_button 
+                        unless is_current_user
+                            if currentUser
+                                // div
+                                +user_friend_button 
                         if is_current_user
-                            a.ui.basic.button.logout(href="#" title='log out')
+                            a.ui.basic.fluid.button.logout(href="#" title='log out')
                                 i.sign.out.icon
                                 |log out
                         if is_dev
@@ -55,6 +55,15 @@ template(name='profile')
                             a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
                                 i.calendar.icon
                                 |events
+                            a.zoomer.item(href="/u/#{username}/bookmarks" class="{{isActiveRoute 'user_debits'}}")
+                                i.bookmark.icon
+                                |bookmarks
+                            a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
+                                i.thumbs.up.outline.icon
+                                |upvotes
+                            a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
+                                i.thumbs.down.outline.icon
+                                |downvotes
                             a.zoomer.item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}")
                                 i.users.icon
                                 |friends
@@ -164,6 +173,12 @@ template(name='authored_overlap')
                 .ui.label #{title}:#{count}
 
 
+template(name='user_bookmarks')
+    +i n='bookmark'
+    .ui.inline.header 
+        |bookmarks
+    each bookmarks 
+        .ui.header #{title}
 template(name='user_rentals')
 template(name='user_events')
     .ui.header events
