--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -30,7 +30,7 @@ head
 
     link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css")
     script(src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js")
-    // script(src="https://cdn.jsdelivr.net/npm/sweetalert2@9")
+    script(src="https://cdn.jsdelivr.net/npm/sweetalert2@9")
 
     
     script.
