--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -193,7 +193,7 @@ html.ios body {
 .topnav.menu {
     /*border-radius: 0 0 10px 10px !important; */
     /*transition: background-color 3s ease !important;*/
-    background-color: rgba(250,250,250,1) !important; 
+    /*background-color: rgba(250,250,250,1) !important; */
     /*background-color: rgba(50,110,100,1) !important; */
 
     /* opacity: .7 !important; */
@@ -318,7 +318,7 @@ input
 
 .card {
     /* background: black !important; */
-    /*border-radius: 10px !important; */
+    border-radius: 10px !important; 
 }
 
 a.goto_article {
@@ -357,13 +357,13 @@ a.goto_article {
 .zoomer:hover {
     transition: all .4s ease !important; 
     z-index: 1000 !important;
-    transform: scale(1.1) !important;
+    transform: scale(1.05) !important;
 }
-img.zoomer:hover {
-    transition: all .2s ease !important; 
-    z-index: 1000 !important;
-    transform: scale(1.2) !important;
-}
+/*img.zoomer:hover {*/
+/*    transition: all .2s ease !important; */
+/*    z-index: 1000 !important;*/
+/*    transform: scale(1.2) !important;*/
+/*}*/
 .superzoom:hover {
     transition: all .25s ease !important; 
     transform: scale(2) !important;
