--- a/parts/client/stack.jade
+++ b/parts/client/stack.jade
@@ -140,6 +140,7 @@ template(name='stack_page')
                         // iframe(width="100%" height="500" src=link frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
                     +comments
                 .four.wide.column
+                    +bookmark_button
                     +voting
                     a.ui.header(href="/site/#{site}") 
                         |site: #{site}
