--- a/parts/profile.jade
+++ b/parts/profile.jade
@@ -35,7 +35,7 @@ template(name='profile')
                         if is_current_user
                             a.ui.basic.button.logout(href="#" title='log out')
                                 i.sign.out.icon
-                                |log out
+                                .mobile.hidden log out
                         if is_dev
                             +print_this
                         .ui.fluid.dropdown.basic.button
@@ -49,94 +49,90 @@ template(name='profile')
                                         // else
                                         //     .ui.label.image #{initials}
                                         | #{username}
-                        .ui.fluid.simple.dropdown.basic.button.mobile.only
+                        .ui.fluid.dropdown.basic.button.mobile.only
                             i.bars.icon
                             | menu
                             .menu 
-                                a.zoomer.item(href="/u/#{username}" class="{{isActiveRoute 'user_debits'}}")
+                                a.item(href="/u/#{username}" class="{{isActiveRoute 'user_debits'}}")
                                     i.dashboard.icon
                                     |dashboard
-                                a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
+                                a.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
                                     i.calendar.icon
                                     |events
-                                a.zoomer.item(href="/u/#{username}/bookmarks" class="{{isActiveRoute 'user_debits'}}")
+                                a.item(href="/u/#{username}/bookmarks" class="{{isActiveRoute 'user_debits'}}")
                                     i.bookmark.icon
                                     |bookmarks
-                                a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
+                                a.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
                                     i.thumbs.up.outline.icon
                                     |upvotes
-                                a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
+                                a.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
                                     i.thumbs.down.outline.icon
                                     |downvotes
-                                a.zoomer.item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}")
+                                a.item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}")
                                     i.users.icon
                                     |friends
-                                a.zoomer.item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_debits'}}")
+                                a.item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_debits'}}")
                                     i.money.icon
                                     |debits
-                                a.zoomer.item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}")
+                                a.item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}")
                                     i.money.icon
                                     |credits
-                                a.zoomer.item(href="/u/#{username}/questions" class="{{isActiveRoute 'user_questions'}}")
+                                a.item(href="/u/#{username}/questions" class="{{isActiveRoute 'user_questions'}}")
                                     i.question.icon
                                     |quesions
-                                a.zoomer.item(href="/u/#{username}/answers" class="{{isActiveRoute 'user_answers'}}")
+                                a.item(href="/u/#{username}/answers" class="{{isActiveRoute 'user_answers'}}")
                                     i.money.icon
                                     |answers
-                                a.zoomer.item(href="/u/#{username}/tribes" class="{{isActiveRoute 'user_tribes'}}")
+                                a.item(href="/u/#{username}/tribes" class="{{isActiveRoute 'user_tribes'}}")
                                     i.fire.icon
                                     |tribes
-                                a.zoomer.item(href="/u/#{username}/overlap" class="{{isActiveRoute 'user_overlap'}}")
+                                a.item(href="/u/#{username}/overlap" class="{{isActiveRoute 'user_overlap'}}")
                                     i.money.icon
                                     |overlap
 
                         .ui.vertical.fluid.menu.mobile.hidden
-                            a.zoomer.item(href="/u/#{username}" class="{{isActiveRoute 'user_debits'}}")
+                            a.item(href="/u/#{username}" class="{{isActiveRoute 'user_debits'}}")
                                 i.dashboard.icon
                                 |dashboard
-                            a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
+                            a.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
                                 i.calendar.icon
                                 |events
-                            a.zoomer.item(href="/u/#{username}/bookmarks" class="{{isActiveRoute 'user_debits'}}")
+                            a.item(href="/u/#{username}/bookmarks" class="{{isActiveRoute 'user_debits'}}")
                                 i.bookmark.icon
                                 |bookmarks
-                            a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
+                            a.item(href="/u/#{username}/upvotes" class="{{isActiveRoute 'user_debits'}}")
                                 i.thumbs.up.outline.icon
                                 |upvotes
-                            a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
+                            a.item(href="/u/#{username}/downvotes" class="{{isActiveRoute 'user_debits'}}")
                                 i.thumbs.down.outline.icon
                                 |downvotes
-                            a.zoomer.item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}")
+                            a.item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}")
                                 i.users.icon
                                 |friends
-                            a.zoomer.item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_debits'}}")
+                            a.item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_debits'}}")
                                 i.money.icon
                                 |debits
-                            a.zoomer.item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}")
+                            a.item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}")
                                 i.money.icon
                                 |credits
-                            a.zoomer.item(href="/u/#{username}/questions" class="{{isActiveRoute 'user_questions'}}")
+                            a.item(href="/u/#{username}/questions" class="{{isActiveRoute 'user_questions'}}")
                                 i.question.icon
                                 |quesions
-                            a.zoomer.item(href="/u/#{username}/answers" class="{{isActiveRoute 'user_answers'}}")
+                            a.item(href="/u/#{username}/answers" class="{{isActiveRoute 'user_answers'}}")
                                 i.money.icon
                                 |answers
-                            a.zoomer.item(href="/u/#{username}/tribes" class="{{isActiveRoute 'user_tribes'}}")
+                            a.item(href="/u/#{username}/tribes" class="{{isActiveRoute 'user_tribes'}}")
                                 i.fire.icon
                                 |tribes
-                            a.zoomer.item(href="/u/#{username}/overlap" class="{{isActiveRoute 'user_overlap'}}")
+                            a.item(href="/u/#{username}/overlap" class="{{isActiveRoute 'user_overlap'}}")
                                 i.money.icon
                                 |overlap
                         .divider
                         if i_have_points
-                            a.item.send(title='send points')
-                                i.gift.icon
-                                span send pts
                             .ui.button.request(title='request points')
                                 i.concierge.bell.teal.icon
                                 span request
                                 
-                        if i_have_points
                             .ui.button.send(title='send points')
                                 i.gift.large.icon
                                 span send pts
@@ -227,6 +223,7 @@ template(name='user_events')
 template(name='user_friends')
     .ui.header user friends
 template(name='user_dashboard')
+    +user_bookmarks_small
     // +user_about
     // .ui.hidden.divider
     .ui.stackable.four.column.grid
@@ -361,6 +358,15 @@ template(name='user_dashboard')
             //                 .header #{body}
             //                 .meta #{_when}
            
+           
+           
+template(name='user_bookmarks_small')
+    .ui.small.header 
+        i.red.bookmark.icon
+        |bookmarks
+    .ui.selection.link.list
+        each bookmarks
+            a.item(href="#")
            
            
 template(name='user_topups')
